--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -18,8 +18,8 @@ $font-sizes: (
 $fa-font-sizes: (
   tiny: 1rem,
   small: 1.333rem,
-  medium: 2.667rem,
-  large: 4rem
+  medium: 2rem,
+  large: 2.5rem
 );
 
 $geometry: (
